@@ -29,7 +29,8 @@ define( function( require ) {
   function BalanceScalesNode( equationProperty, aligner, options ) {
 
     options = _.extend( {
-      bottom: 0
+      bottom: 0,
+      xSpacing: 237 // horizontal spacing between the tips of the fulcrums
     }, options );
 
     var self = this;
@@ -39,6 +40,7 @@ define( function( require ) {
     this.constantBottom = options.bottom; // @private
     this.reactantCountProperties = {}; // @private maps {String} Element.symbol to {Property<Number>} count of the element
     this.productCountProperties = {}; // @private maps {String} Element.symbol to {Property<Number>} counts of the element
+    this.xSpacing = options.xSpacing; // @private horizontal spacing between the tips of the fulcrums
 
     Node.call( this );
 
@@ -81,7 +83,6 @@ define( function( require ) {
         this.productCountProperties = {};
 
         var atomCounts = this.equationProperty.get().getAtomCounts(); // [AtomCount]
-        var dx = 237; // horizontal space between scale centers, determined by visual inspection
         var x = 0;
         for ( var i = 0; i < atomCounts.length; i++ ) {
 
@@ -97,7 +98,7 @@ define( function( require ) {
           var scaleNode = new BalanceScaleNode( atomCount.element, leftCountProperty, rightCountProperty, this.equationProperty.get().balancedProperty, { x: x } );
           this.addChild( scaleNode );
 
-          x += dx;
+          x += this.xSpacing;
         }
 
         this.centerX = this.aligner.getScreenCenterX();
